examples/test_package/Double_dc_full/steps/pl___robot_rough_run5/#test_results_result.txt
Error evaluating Problog model:
    result = action(s, pos)
             ^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 370, in _token_dot
    raise UnexpectedCharacter(s, pos)
problog.parser.UnexpectedCharacter: Unexpected character '.' at 30:82.